@@ -24,9 +24,12 @@ using namespace std;
 using namespace Slice;
 using namespace IceUtil;
 
-Slice::Gen::Gen(const string& name, const string& base,	const string& include, const vector<string>& includePaths,
+Slice::Gen::Gen(const string& name, const string& base,	const string& headerExtension,
+	        const string& sourceExtension, const string& include, const vector<string>& includePaths,
 		const string& dllExport, const string& dir, bool imp) :
     _base(base),
+    _headerExtension(headerExtension),
+    _sourceExtension(sourceExtension),
     _include(include),
     _includePaths(includePaths),
     _dllExport(dllExport),
@@ -48,8 +51,8 @@ Slice::Gen::Gen(const string& name, const string& base,	const string& include, c
 
     if(_impl)
     {
-        string fileImplH = _base + "I.h";
-        string fileImplC = _base + "I.cpp";
+        string fileImplH = _base + "I." + _headerExtension;
+        string fileImplC = _base + "I." + _sourceExtension;
         if(!dir.empty())
         {
             fileImplH = dir + '/' + fileImplH;
@@ -93,8 +96,8 @@ Slice::Gen::Gen(const string& name, const string& base,	const string& include, c
         implH << '\n';
     }
 
-    string fileH = _base + ".h";
-    string fileC = _base + ".cpp";
+    string fileH = _base + "." + _headerExtension;
+    string fileC = _base + "." + _sourceExtension;
     if(!dir.empty())
     {
 	fileH = dir + '/' + fileH;
@@ -165,7 +168,7 @@ Slice::Gen::generate(const UnitPtr& unit)
     {
 	C << _include << '/';
     }
-    C << _base << ".h>";
+    C << _base << "." << _headerExtension << ">";
 
     H << "\n#include <Ice/LocalObjectF.h>";
     H << "\n#include <Ice/ProxyF.h>";
